--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
 
       - uses: phpdocker-io/github-actions-delete-abandoned-branches@v1
         with:
+          github_token: ${{ github.token }}
           last_commit_age_days: 100
           dry_run: no
           
