--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,9 @@
 on:
   schedule:
-    - cron: "5 * * * *"
+    - cron: "* * * * *"
 
   # Allow workflow to be manually run from the GitHub UI
-  #workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   cleanup-repository:
