--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ on:
     - cron: "* * * * *"
 
   # Allow workflow to be manually run from the GitHub UI
-  workflow_dispatch:
+  #workflow_dispatch:
 
 jobs:
   cleanup-repository:
