Update and rename blank.yml to CleanUp.yml

--- a/.github/workflows/CleanUp.yml
+++ b/.github/workflows/CleanUp.yml
@@ -1,3 +1,4 @@
+#Schedule for Every Minute
 on:
   schedule:
     - cron: "* * * * *"
@@ -27,3 +28,4 @@ jobs:
           last_commit_age_days: 100
           dry_run: no
           
+
