--- a/.github/workflows/CleanUp.yml
+++ b/.github/workflows/CleanUp.yml
@@ -4,7 +4,7 @@ on:
     - cron: "* * * * *"
 
   # Allow workflow to be manually run from the GitHub UI
-  #workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   cleanup-repository:
